level2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-web
  namespace: jenkins-ns
spec:
  selector:
    app: jenkins
  ports:
  - port: 80
    targetPort: 8080
